--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ target/
 META-INF
 Gradle/.gradle
 .gradle/
-out
 
 ### IntelliJ IDEA ###
 .idea
@@ -36,4 +35,6 @@ build/
 .vscode/
 
 ### Mac OS ###
-.DS_Store
+.DS_Store!/out/
+!/out/
+!/META-INF/
